fix: align both submit and send buttons

--- a/style.css
+++ b/style.css
@@ -54,10 +54,18 @@ input[type="email"] {
     width: 50%;
     height: auto;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 fieldset {
     border: 0;
+}
+
+button[type="submit"] {
+    margin-top: auto;
+    width: 100%;
 }
 
 footer {
